--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
       border-radius: 12px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
       width: 100%;
-      max-width: 400px;
+      height: 100vh; /* 100% da altura da tela */
     }
+   
+  
+  
 
     .pix-logo {
       display: flex;
@@ -75,6 +78,13 @@
       font-size: 16px;
       cursor: pointer;
     }
+    @media (max-width: 768px) {
+  .container {
+    padding: 10px;
+    font-size: 14px; /* Ajuste de fonte para telas menores */
+  }
+}
+
   </style>
 </head>
 <body>
