--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Pagamento via Pix</title>
   <style>
     body {
@@ -18,11 +20,9 @@
       border-radius: 12px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
       width: 100%;
-      height: 100vh; /* 100% da altura da tela */
+      min-width: 100%; /* Para garantir que o conteúdo nunca fique menor que 100% da tela */
+
     }
-   
-  
-  
 
     .pix-logo {
       display: flex;
@@ -80,11 +80,9 @@
     }
     @media (max-width: 768px) {
   .container {
-    padding: 10px;
-    font-size: 14px; /* Ajuste de fonte para telas menores */
+    width: 100vw; /* Força a largura da tela no celular */
   }
 }
-
   </style>
 </head>
 <body>
@@ -110,7 +108,7 @@
     <input type="text" id="telefone" placeholder="Telefone">
     <input type="text" id="congregacao" placeholder="Congregação">
     <input type="file" id="comprovante" accept="image/*">
-    <p style="font-size: 13px; color: #777;">
+    <p style="font-size: 13px; color: #000000;">
       Obs: a imagem do comprovante não será enviada automaticamente. Você deve anexar manualmente ao abrir o WhatsApp.
     </p>
     <button class="send-btn" onclick="enviarWhatsApp()">Enviar pelo WhatsApp</button>
